[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ic-stable-structures = "0.6"
ic-cdk-timers = "0.11"
strategy_common = { path = "../strategy_common" }