[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
export_candid = []

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
ic-ledger-types = { workspace = true }
async-trait = { workspace = true }
strategy_common = { path = "../strategy_common" }
hex = "0.4.3"
bincode = { workspace = true }