[package]
name = "strategy_common"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
async-trait = { workspace = true } 